--- a/TicTacToe.ipynb
+++ b/TicTacToe.ipynb
@@ -120,7 +120,7 @@
    ],
    "source": [
     "place_marker(test_board, \"X\", 5)\n",
-    "display(test_board)"
+    "display(test_board)\n"
    ]
   },
   {
@@ -325,6 +325,16 @@
     "                    \n",
     "        if not replay:\n",
     "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2dd0072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print 6"
    ]
   },
   {
